--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "co": "^4.6.0",
     "express": "^4.14.0",
+    "log4js": "^0.6.37",
     "method-override": "^2.3.6",
-    "shadow-mysql": "^1.0.0",
+    "shadow-mysql": "^2.0.1",
     "underscore": "^1.8.3"
   },
   "name": "airplake_backend",
