--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.14.0",
     "log4js": "^0.6.37",
     "method-override": "^2.3.6",
+    "nodemailer": "^2.5.0",
     "shadow-mysql": "^2.0.2",
     "underscore": "^1.8.3"
   },
