--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.15.2",
     "co": "^4.6.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.6",
     "log4js": "^0.6.37",
     "method-override": "^2.3.6",
     "nodemailer": "^2.5.0",
