--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,17 @@ jspm_packages
 .node_repl_history
 
 config.js
+
+.vscode/launch.json
+
+index.html
+
+log/http.log.1
+
+log/http.log.2
+
+log/http.log.3
+
+log/user.log.1
+
+log/user.log.2
